# VAGScanner

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: release.yml
examples/: README.md  advanced_uds.CSV  autoscan.TXT  classic_group.CSV
installer/: README.md  build_installer.ps1  vcds-toolkit.iss  vcds_gui.spec
scripts/: make_icon.py  make_samples.py  smoke_logs.py
src/vcds_core/: __init__.py  compare.py  compute.py  diagnose.py  garage.py  importers.py  parse.py  perform.py  profiles.py  trip.py
src/vcds_gui/: ai.py  app.py  log_tools.py  updater.py
src/vcds_mcp/: server.py
src/vcds_obd/: enhanced.py  live.py
tests/: conftest.py  test_ai.py  test_audit_fixes.py  test_compare.py  test_enhanced.py  test_garage.py  test_gui_smoke.py  test_live.py  test_parse.py  test_pyobd_connection.py  test_timing.py  test_updater.py
